# minila

./: .gitignore  CMakeLists.txt  README.md  library.cpp  main.cpp  tests.cpp
include/minila/: array.h  array_definition.h  base.h  blas.h  blas_multiply.h  constants.h  integration.h  linsolve.h  lu.h  matrix.h  matrix_multiply.h  minila.h  naive.h  numerical.h  operator_naive.h  operator_performance.h  operators.h  print.h  svd.h  vector.h
include/minila/processes/: base.h  brownian.h  geometric.h
